fix word wrapping on mobile portrait

--- a/src/mobile.less
+++ b/src/mobile.less
@@ -220,7 +220,9 @@ body.mobile {
 
                 .skewed-text {
                     display: inline;
+
                     font-style: italic;
+                    white-space: normal;
 
                     padding-left: 0;
                     padding-right: 0;
